# mod_siprec

./: .gitignore  Makefile.am  mod_siprec.c  mod_siprec.h  readme.md  recording_session.c  recording_session.h
autoload_conf/: siprec.conf.xml
